# local-gaa-fixtures-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  gaa_fixtures_parser.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
